# wav2mp3Converter

./: .gitignore  CMakeLists.txt  Makefile  README.md  fileUtils.cpp  fileUtils.h  lameEncoder.cpp  main.cpp  platform.h  posix_thread.h  wavReader.cpp
lame-3.100/: CMakeLists.txt
wav2mp3Converter/: CMakeLists.txt  fileUtils.cpp  fileUtils.h  lameEncoder.cpp  lameEncoder.h  main.cpp  platform.cpp  posix_thread.cpp  wav2mp3Converter.sln  wavReader.cpp  wavReader.h
wav2mp3Converter/Debug/: wav2mp3Converter.ilk
wav2mp3Converter/wav2mp3Converter/: wav2mp3Converter.vcxproj  wav2mp3Converter.vcxproj.filters
wav2mp3Converter/wav2mp3Converter/Debug/: main.obj.enc  vc142.idb
wav2mp3Converter/wav2mp3Converter/Debug/wav2mp3Converter.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  wav2mp3Converter.lastbuildstate
